DRAKEN-4622: Change API - Change attachments to binary from string.
